syntax = "proto3";
package oraichain.orai.provider;
import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";
option go_package = "github.com/oraichain/orai/x/provider/types";

message OracleScript {
  option (gogoproto.goproto_stringer) = true;
  string name = 1;
  string contract = 2;
  // Owner is the address who is allowed to make further changes to the data source.
  bytes owner = 3 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  string description = 4;
  repeated cosmos.base.v1beta1.Coin minimum_fees = 5 [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins", (gogoproto.moretags) = "json:\"minimum_fees\""];
  repeated string d_sources = 6 [(gogoproto.moretags) = "json:\"data_sources\"", (gogoproto.customname) = "DSources"];
  repeated string t_cases = 7 [(gogoproto.moretags) = "json:\"test_cases\"", (gogoproto.customname) = "TCases"];
}